--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.9.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>club.minnced</groupId>
+            <artifactId>discord-webhooks</artifactId>
+            <version>0.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
