Added a few utility things

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>discord-webhooks</artifactId>
             <version>0.5.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+
     </dependencies>
 
     <build>
